deployments/whoami.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`who.madl.date`) || Host(`madl.date`)
      kind: Rule
#      middlewares:
#        - name: headers-default@file
      services:
        - name: whoami
          port: 80
---

apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: traefik
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: whoami
  type: ClusterIP
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: whoami
#  namespace: traefik
#  labels:
#    app: whoami
#spec:
#  containers:
#    - name: whoami
#      image: containous/whoami:latest
#      ports:
#        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: traefik
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami:latest
        ports:
        - containerPort: 80
